# niri-output-scaler

./: README.md  pyproject.toml
niri_output_scaler/: __main__.py
